2020-06-20 Erik Petrich <epetrich AT ivorytower.normna.ok.us>

	* src/pdk/gen.c (cheapMove, aopOp): Fix bug #3038

2020-06-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-3056.c,
	  src/SDCCsymt.c: Fix bug #3056 for pdk too
	* src/SDCCsymt.c: Fix bugs #3059, #3049, #3047 (same cause)

2020-06-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCmem.c,
	  src/pic16/main.c: Fix bug #3056
	* src/pic16/gen.c: Fix bug #3057

2020-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2368.c:
	  Fix bug #3063.
	* src/z80/gen.c,
	  src/z80/main.c:
	  Fix bug #3055.
	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/stm8/gen.c:
	  Fix bug #3044.

2020-06-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c: Fix bug #3061
	* src/SDCCcse.c (algebraicOpts): Fix bug #3062

2020-06-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeJumpTable): Fix bug #3034
	* src/SDCCerr.c (vwerror),
	  src/SDCCerr.h: Suppress duplicate diagnostic messages

2020-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClrange.c: Fix rest of bug #3045

2020-06-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/stm8/main.c:
	  Fix bug #2944.

2020-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClrange.c,
	  src/SDCCopt.c: Fix bug #3045 and #3046
	* src/ds390/ralloc.c: Don't assume operand is symbol

2020-06-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  isPort: Implement RFE #679 via patch #372 by Basil Hussain.

2020-06-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  support/regression/tests/bug-3043.c,
	  support/valdiag/tests/bug-3043.c:
	  Fix bug #3043.

2020-06-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Fix bug #3033.

2020-06-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
